2004-03-22  Pascal Obry  <p.obry@wanadoo.fr>

	* wsdl_7_main.adb:
	Update to use the generated CB and Server services.

2004-03-22  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	(RT_SOAP_ASIS): Add wsdl_7.
	(init): Redirect some output to /dev/null.

	* wsdl_b.out:
	Update output.

	* wsdl_7.ads, wsdl_7.adb, wsdl_7.out, wsdl_7_main.adb:
	Initial revision.

2004-03-21  Pascal Obry  <p.obry@wanadoo.fr>

	* upload2.adb:
	Another attempt to ensure stable regtest output.

2004-03-19  Pascal Obry  <p.obry@wanadoo.fr>

	* makefile:
	Do not output diff only if files differ.

	* upload2.adb:
	Properly serialize the output to avoid line swaping.

2004-03-19  Pascal Obry  <p.obry@wanadoo.fr>

	* generate.adb:
	Add instruction null at the end of the procedure.

	* makefile:
	(RT_SOAP): Removes test_speed by default, add only if EXTRA_TESTS
	 is defined.
	(RT_STD_ALONE): Removes tlog by default, add only if EXTRA_TESTS
	 is defined.
	
2004-03-19  Pascal Obry  <p.obry@wanadoo.fr>

	* alldifs.out:
	Initial revision.
	
	* makefile:
	(run): Check that alldiffs is fine to ensure we return an error
	 otherwise.

2004-03-03  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* wait.adb:
	Call Net.Free routine after Net.Shutdown.

	* zopen.adb:
	Do not use AWS.Services.Files.

	* check_mem.adb:
	Do not use AWS.Services.Files.

	* makefile:
	Add ../lib/poll.o to the linker.
	Add wait.adb regression test.

	* sock2.adb:
	Fix copyright years.
	Fix typo in comments.

2004-03-03  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* wait.adb, wait.out:
	Ready to use.

2004-03-01  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* wait.adb:
	Test for wait on group of sockets. Still under development,
	because of problem shutdown detection under Win32.

2004-02-02  Dmitriy Anisimkov <anisimkov@yahoo.com>

	* auth2.out, cert.out, compress.out, dirop.out, get_post.out,
	  googlesearch.out, multiple.out, sback.out, server_config.out,
	  sessions.out, ssback.out, tcom.out, test_soap2.out, test_soap3.out,